new-theme/sjoseph.ucdavis.edu/++theme++quintagroup.theme.sliced/css/sliced.css
/* ... */
h2 {
  font: 20px/28px Georgia;
  padding-bottom: 8px;
}
h3 {
  font: italic 20px/28px Georgia;
  padding-bottom: 14px;
}
h4 {
  font: 16px/22px Georgia;
  color: #127a89;
  padding-bottom: 10px;
}
h5 {
  font: italic 16px/22px Georgia;
  padding-bottom: 10px;
}
h6 {
  font: 12px/20px 'Arimo', sans-serif;
  text-transform: uppercase;
  padding-bottom: 10px;
}
abbr {
  border: 0;
}
label {
  font-weight: normal;
}
.portletLogin label {
  padding-bottom: 8px;
  display: inline-block;
}
#content-core input {
  border: 1px solid #127a89;
  padding: 7px;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
#content-core input:focus {
  outline: none;
}
#portal-top {
  z-index: 4;
}
#portal-top #portal-header {
  z-index: 1;
}
#portal-top #portal-header .nav-wrapper {
  z-index: 9999;
  background: #fff;
}
#portal-top .top-panels-wrap {
  z-index: 2;
}
.nav-wrapper {
  display: flex;
  align-content: space-around;
  flex-direction: row-reverse;
  min-height: 20em;
  width: 100%;
}
#content li,
dl.portlet li,
.portletStaticText li {
  line-height: 20px;
  margin-bottom: 0;
}
.portletStaticText img {
  max-width: 100%;
}
#content ul,
.portletStaticText ul {
  margin: 0 0 15px 16px;
}
#content ol {
  margin: 0 0 15px 20px;
}
.panel:first-child .featured-image {
  margin: 40px 0 0;
}
.featured-image {
  margin: 27px 0 0;
}
.featured-image img {
  max-width: 100%;
  height: auto;
}
.featured-image ~ h2 {
  color: #fff;
}
.panel-above-content .featured-image ~ h2,
#portal-footer-wrapper .featured-image ~ h2 {
  color: #494949;
}
#content .event_listing ul.mode_selector,
#content .event_listing ul.sub_nav {
  margin: 0;
}
.portletStaticText a:hover {
  color: #494949 !important;
}
.hiddenStructure {
  height: 0;
  padding: 0;
  margin: 0;
  width: 0;
}
.nohighlight {
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}
/************grid***********/
div.width-full {
  width: 100%;
}
div.position-0 {
  margin-left: -100%;
}
.panels div.width-1\3a 3 {
  width: 31.666667%;
}
.panels div.width-2\3a 3 {
  width: 65.833333%;
}
.panels div.position-2\3a 3 {
  margin-left: -31.666667%;
}
.panels div.position-1\3a 3 {
  margin-left: -65.833333%;
}
#portal-megamenu div.width-1\3a 4,
.panels div.width-1\3a 4 {
  width: 23.125%;
}
#portal-megamenu div.position-1\3a 4,
.panels div.position-1\3a 4 {
  margin-left: -74.375%;
}
#portal-megamenu div.position-1\3a 2,
.panels div.position-1\3a 2 {
  margin-left: -48.75%;
}
.panels div.position-3\3a 4,
#portal-megamenu div.position-3\3a 4 {
  margin-left: -23.125%;
}
.cont-wrap #viewlet-above-content-title img {
  width: 100%;
  height: auto;
}
.cont-wrap #portal-column-content.width-1\3a 2 {
  margin-left: -74.375%;
  width: 48.75%;
}
#portal-column-content.position-0.width-3\3a 4,
#portal-column-content.position-1\3a 4 {
  width: 74.375%;
}
#portal-column-content.position-1\3a 4 {
  margin-left: -74.375%;
}
.panel dl.portlet dd.portletItem,
.panel dl.portlet dd.portletFooter,
.panel dl.portletError dd,
.panel dl.portlet ul.navTreeLevel0 > .navTreeItem:last-child {
  padding-bottom: 0 ;
}
.panel .portletCalendar .portletItem,
.panel .portletNavigationTree .portletItem:last-child {
  padding-bottom: 0 !important;
}
.panel .portletLogin dd:last-child a,
.panel .ploneCalendar tr:last-child td {
  padding-bottom: 0;
}
.panel .owl-carousel .owl-item img {
  margin-bottom: -2px;
}
.panel .portletSearch dd.portletItem {
  margin: 50px 0 0 0;
}
.panel .portletSearch dd.portletFooter {
  margin-bottom: 45px;
}
.panel .portletQgCarousel,
.panel .portletStaticText,
.panel .portletShelf,
.panel .portletHorizontalTab,
.panel .portletVerticalTabs,
.panel .portletRss,
.panel .portletLogin,
.panel .portletNavigationTree,
.panel .portletCalendar,
.panel .portletRecent,
.panel .portletNews,
.panel .portletEvents,
.panel .portletCollection {
  margin: 41px 0 55px;
}
/*****portal-top****/
#lineageSelectionForm {
  position: fixed;
  z-index: 99999;
  left: 50%;
  margin-left: -65px;
  top: 0;
}
.top-block-wrap,
#edit-bar,
.panels dl.collapsible,
.manage-panel,
.event_listing,
.container {
  max-width: 90%;
  margin: 0 auto;
  position: relative;
}
.panel-full-width .container {
  max-width: 100%;
}
.panel {
  margin: 0 auto;
  position: relative;
}
.top-block {
  min-height: 40px;
  background: #4A4A4A;
  z-index: 999999;
  position: relative;
}
#portal-header a {
  color: #fff;
}
#portal-header a:hover {
  color: #97d5de;
}
.owl-carousel .owl-item img {
  width: 100%;
  height: auto;
}
.owl-carousel .owl-item {
  padding: 0 13px;
  box-sizing: border-box;
}
.top-image {
  min-height: 350px;
  width: 100%;
  text-align: center;
}
.top-image .slogan {
  max-width: 634px;
  color: #fff;
  margin: 0 auto;
  text-align: initial;
  position: absolute;
  left: 25%;
  bottom: 46px;
}
.top-image .slogan h1,
.top-image .slogan h2,
.top-image .slogan h3,
.top-image .slogan h4,
.top-image .slogan h5,
.top-image .slogan p {
  color: #fff;
  font: Italic 26px/34px Georgia;
}
.top-image .slogan p {
  font: Italic 26px/34px Georgia;
}
.slogan .panel .portletStaticText {
  margin: 0;
}
#portal-searchbox,
#portal-languageselector,
#portal-personaltools-wrapper,
.global-nav-left,
.global-nav-right {
  position: relative;
  z-index: 99;
}
.portal-logo {
  margin: 0;
  display: inline-block;
}
.portal-logo img {
  margin: 50px 0 ;
}
#portal-personaltools #anon-personalbar a {
  white-space: nowrap;
  margin: 0;
}
/*****navigation****/
#nav-trigger {
    display: none;
}

label[for="nav-trigger"] {
	background-color: transparent;
/*     position: relative; */
/*     top: 50%; */
/*     height: 100%; */
    padding: 2px;
/*     margin: 5px; */
/*     float: right; */
}

label[for="nav-trigger"]:hover {
    border-radius: 5%;
    color: white;
    background-color: #127a89;
    cursor: pointer;
}

.top-image {
  margin-top: 66px;
}
/* ... */

